--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Calendar</h1>
 
 <iframe style="border-width: 0;" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTz=0&amp;mode=WEEK&amp;height=1120&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=9rai7sa384ua4p0b5drk5ppkbk%40group.calendar.google.com&amp;color=%23691426&amp;src=ma2uhbrd1llqql65d46jtbqkgk%40group.calendar.google.com&amp;color=%236B3304&amp;src=p7rjbedf52q8jmgddogchbvgjhq93e9m%40import.calendar.google.com&amp;color=%23711616&amp;ctz=Europe%2FStockholm" width="1000" height="1120" frameborder="0" scrolling="no"></iframe>
 
