--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Smart Gym</title>
+		<title>Amanda Sjöström</title>
 		
 
 		<!-- SOON CSS STYLESHEET -->
@@ -48,52 +48,20 @@
 	<body>
 		<div class="container">
 			<div class="header" id="header">
-				<h1>Smart Gym</h1>
+				<h1>Amanda Sjöström</h1>
 
-				<a href="#our_team">Our Team</a>
-				<a href="#challenges">Challenges</a>
-				<a href="#conceptual_design">Conceptual design</a>
-				<a href="#implementation">Implementation</a>
+				<a href="#about">About</a>
 				<a href="#photos">Photos</a>
 			</div>
 
 			<div class="content" id="content">
-				<div class="page" id="our_team">
-					<a name="our_team" name="top"></a>
-					<h2>Our Team</h2>
-					<p>We are a group of students in the course Ubiquitous Computing, fall 15, at Umeå University</p>
+				<div class="page" id="about">
+					<a name="about" name="top"></a>
+					<h2>About me</h2>
 
 					<p> <b>Amanda Sjöström</b> - Interaction and Design</p>
-					<p> <b>Anke Eliasson</b> - Computer Science</p>
-					<p> <b>Daniel Ögren</b> - Computer Science</p>
-					<p> <b>Katarina Hägglund</b> - Interaction and Design</p>
 				</div>
-
-				<div class="spacer"><a href="#top">Go to top</a></div>
-				<div class="page" id="challenges">
-					<a name="challenges"></a>
-					<h2>Challenges at the gym</h2>
-					<ul>
-						<li>Counting number of repetitions</li>
-						<li>Remember results</li>
-						<li>Evaluate the excercises</li>
-					</ul>
-				</div>
-
-				<div class="spacer"><a href="#top">Go to top</a></div>
-				<div class="page" id="conceptual_design">
-					<a name="conceptual_design"></a>
-					<h2>Conceptual design</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
-				</div>
-
-				<div class="spacer"><a href="#top">Go to top</a></div>
-				<div class="page" id="implementation">
-					<a name="implementation"></a>
-					<h2>Implementation and code</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
-				</div>
-
+				
 				<div class="spacer"><a href="#top">Go to top</a></div>
 				<div class="page" id="photos">
 					<a name="photos"></a>
