--- a/website/index.html
+++ b/website/index.html
@@ -27,20 +27,11 @@
 				height: 50px;
 				background-color: black;
 			}
-			#our_team {
+			#about {
 				background-color: blue;
 			}
-			#challenges {
-				background-color: red;
-			}
-			#conceptual_design {
-				background-color: orange;
-			}
-			#implementation {
-				background-color: purple;
-			}
 			#photos {
-				background-color: pink;
+				background-color: purple;
 			}
 		</style>
 	</head>
