--- a/website/index.html
+++ b/website/index.html
@@ -14,6 +14,7 @@
 			.container {
 				background-color: black;
 				width: 100%;
+				margin: 0;
 			}
 			.header {
 				background-color: black;
@@ -22,10 +23,12 @@
 				top: 0;
 				width: 100%;
 				height: 100px;
+				margin: 0;
 			}			
 			.page {
 				padding: 150px 150px 100px;
 				height: 100%;
+				margin: 0;
 			}
 			.spacer {
 				height: 50px;
@@ -59,7 +62,7 @@
 
 					<p> <b>Amanda Sjöström</b> - Interaction and Design</p>
 				</div>
-				
+
 				<div class="spacer"><a href="#top">Go to top</a></div>
 				<div class="page" id="photos">
 					<a name="photos"></a>
